istio/manifests/istio-registry/registry-gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: registry-gateway
  namespace: zarf
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "registry.###ZARF_DOMAIN_NAME###"
